# onboarding-epoch-v

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yaml  main.py  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: unit-tests.yaml
src/: chatbot.py
tests/: test_chatbot.py
