[project]
name = "onboarding-epoch-v"
version = "0.1.0"
description = "A practice repository for the new engineers of Team Epoch V."
authors = [
    { name = "Jeffrey Lim", email = "Jeffrey-Lim@outlook.com" }
]
dependencies = [
    "tqdm>=4.66.4",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
main = "main:run_aimigo"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src", "main"]
